New version of Web file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello Coursera</title>
   </head>
   <body>
-    <h1>Hello Coursera members</h1>
+    <h1>Hello Coursera members. I am curious about this course..</h1>
   </body>
 </html>
